Fix wrapping on Title

--- a/style.css
+++ b/style.css
@@ -122,13 +122,14 @@ main {
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
   padding: 8px;
-  font-size: 1.5rem;
 }
 
 .btn.remove {
   background-color: var(--red);
   grid-area: 1 / 2 / 2 / 3;
   margin: 8px;
+  height: 50px;
+  width: 50px;
 }
 
 .btn.remove:hover {
@@ -150,8 +151,8 @@ main {
 
 .btn.boolRead {
   background-color: var(--green);
-  min-width: 50px;
-  min-height: 50px;
+  height: 50px;
+  width: 50px;
   border-radius: 8px;
   grid-area: 4 / 2 / 5 / 2;
   border: none;
@@ -173,7 +174,7 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* visibility: hidden; */
+  visibility: hidden;
 }
 
 .addBook > form {
